// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-patterns-editor-field Renders \`c-patterns-editor-field\` with advanced tab 1`] = `
<div
  class="layout column"
>
  <!---->
  <div
    class="v-tabs"
  >
    <div
      class="v-tabs__bar theme--light"
    >
      <transition-stub
        name="fade-transition"
      />
      <div
        class="v-tabs__wrapper"
      >
        <div
          class="v-tabs__container v-tabs__container--centered"
        >
          <div
            class="v-tabs__slider-wrapper"
            style="transition: none;"
          >
            <div
              class="v-tabs__slider primary"
            />
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item"
              href="#simple"
            >
              Simple editor
            </a>
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item v-tabs__item--active"
              href="#advanced"
            >
              Advanced editor
            </a>
          </div>
        </div>
      </div>
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-window"
    >
      <div
        class="v-window__container"
      >
        <transition-stub
          name="v-window-x-transition"
        >
          <div
            class="v-window-item"
            style="display: none;"
          >
            <c-pattern-groups-field-stub
              attributes=""
              class="mt-2"
              name="patterns.groups"
              value=""
            />
          </div>
        </transition-stub>
        <transition-stub
          name="v-window-x-transition"
        >
          <div
            class="v-window-item"
            style=""
          >
            <c-patterns-advanced-editor-field-stub
              attributes=""
              disabled="true"
              name="patterns.json"
              value=""
            />
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <div
    class="layout align-center justify-end"
  >
    <!---->
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
    <!---->
  </div>
</div>
`;

exports[`c-patterns-editor-field Renders \`c-patterns-editor-field\` with custom props 1`] = `
<div
  class="layout column"
>
  <c-pattern-field-stub
    class="mb-2"
    disabled="true"
    required="required"
    return-object="return-object"
    type="alarm"
    value="pattern-id"
  />
  <div
    class="v-tabs"
  >
    <div
      class="v-tabs__bar theme--light"
    >
      <transition-stub
        name="fade-transition"
      />
      <div
        class="v-tabs__wrapper"
      >
        <div
          class="v-tabs__container v-tabs__container--centered"
        >
          <div
            class="v-tabs__slider-wrapper"
            style="transition: none;"
          >
            <div
              class="v-tabs__slider primary"
            />
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item v-tabs__item--active"
              href="#simple"
            >
              Simple editor
            </a>
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item"
              href="#advanced"
            >
              Advanced editor
            </a>
          </div>
        </div>
      </div>
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-window"
    >
      <div
        class="v-window__container"
      >
        <transition-stub
          name=""
        >
          <div
            class="v-window-item"
          >
            <c-pattern-groups-field-stub
              attributes="[object Object]"
              class="mt-2"
              disabled="true"
              name="name.groups"
              required="true"
              type="alarm"
              value="[object Object]"
            />
          </div>
        </transition-stub>
        <transition-stub
          name=""
        >
          <div
            class="v-window-item"
            style="display: none;"
          />
        </transition-stub>
      </div>
    </div>
  </div>
  <div
    class="layout align-center justify-end"
  >
    <!---->
    <button
      class="mr-0 v-btn theme--light primary"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Edit
      </div>
    </button>
  </div>
  <div
    class="flex"
  >
    <!---->
    <!---->
  </div>
</div>
`;

exports[`c-patterns-editor-field Renders \`c-patterns-editor-field\` with default props 1`] = `
<div
  class="layout column"
>
  <!---->
  <div
    class="v-tabs"
  >
    <div
      class="v-tabs__bar theme--light"
    >
      <transition-stub
        name="fade-transition"
      />
      <div
        class="v-tabs__wrapper"
      >
        <div
          class="v-tabs__container v-tabs__container--centered"
        >
          <div
            class="v-tabs__slider-wrapper"
            style="transition: none;"
          >
            <div
              class="v-tabs__slider primary"
            />
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item v-tabs__item--active"
              href="#simple"
            >
              Simple editor
            </a>
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item"
              href="#advanced"
            >
              Advanced editor
            </a>
          </div>
        </div>
      </div>
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-window"
    >
      <div
        class="v-window__container"
      >
        <transition-stub
          name=""
        >
          <div
            class="v-window-item"
          >
            <c-pattern-groups-field-stub
              attributes=""
              class="mt-2"
              name="patterns.groups"
              value=""
            />
          </div>
        </transition-stub>
        <transition-stub
          name=""
        >
          <div
            class="v-window-item"
            style="display: none;"
          />
        </transition-stub>
      </div>
    </div>
  </div>
  <div
    class="layout align-center justify-end"
  >
    <!---->
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
    <!---->
  </div>
</div>
`;
